--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 mock-tts
 
 example:
-curl -X POST -d '{"text":"[1234](1000)[4321]"}' -H 'Content-Type:application/json' 127.0.0.1:5000/v1/tts > test.wav
+curl -X POST -d '{"text":"{YourServerIs1}(50)[1234](50){YourServerIs2}"}' -H 'Content-Type:application/json' 127.0.0.1:5000/v1/tts > test.wav
